<resources>

    <string name="app_name">ToDoListMidterm</string>
	<string name="addItemHint">New To Do Item</string>
	<string name="addContentDescription">New To Do Item</string>
	<string name="address">123 Address, City, State</string>
	
	<string name="action_settings">None</string>
	
	<string name="taskheader">Task</string>
	<string name="locationheader">Location</string>
	<string name="dateheader">Date (Tap Date to Edit)</string>
	<string name="timeheader">Time (Tap Time to Edit)</string>
	<string name="reminderheader">Enable Reminder</string>
	<string name="detailtaskhint">ToDo Task</string>
	<string name="bReminderText">Reminder</string>
	
	<string name="set_date">Set Date</string>
	<string name="set_time">Set Time</string>
	<string name="blank">OOPS</string>
	<string name="menu_text">Show ToDo List</string>
	<string name="map">Show on map</string>
	
	<string name="stateNS">Not Started</string>
	<string name="stateS">Started</string>
	<string name="stateC">Complete</string>
	
	<string name="priorL">Low</string>
	<string name="priorM">Medium</string>
	<string name="priorH">High</string>
	
	<string name="stringChrono">Sort Chronologically</string>
	<string name="stringPrior">Sort by Priority</string>
	<string name="stringState">Sort by State</string>

</resources>